--- a/country/singapore.html
+++ b/country/singapore.html
@@ -27,22 +27,11 @@
     <link rel="stylesheet" href="../assets/css/responsive/main/main_768.css">
     <link rel="stylesheet" href="../assets/css/country.css">
 
-    <style>
-        @media (max-width: 768px) {
-            .partners-grid .row {
-                transform: scale(0.5);
-                transform-origin: top center;
-                margin-bottom: 0;
-                max-height: 150px;
-            }
-        }
-    </style>
-
 </head>
 
 <body>
 
-    <div class="container" style="border: 2px solid black;">
+    <div class="container">
 
         <header>
             <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
