--- a/contact_us.html
+++ b/contact_us.html
@@ -31,7 +31,7 @@
 
 <body>
 
-    <div class="container" style="border: 2px solid black;">
+    <div class="container">
 
         <header>
             <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
