--- a/country/malaysia.html
+++ b/country/malaysia.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    
+
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../assets/css/main.css">
@@ -32,7 +32,7 @@
 
 <body>
 
-    <div class="container" style="border: 2px solid black;">
+    <div class="container">
 
         <header>
             <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
@@ -299,7 +299,7 @@
                     </div>
 
                     <div class="partner-section">
-                        <h2 class="scroll-animation" data-animation="animate__fadeInUp">Supported by:</h2>
+                        <h2 class="scroll-animation" data-animation="animate__fadeInUp">Supported By:</h2>
                         <div class="partners-grid mt-5">
                             <div class="row align-items-start g-4">
                                 <!-- ... partner items ... -->
