--- a/tc.html
+++ b/tc.html
@@ -31,7 +31,7 @@
 
 <body>
 
-    <div class="container" style="border: 2px solid black;">
+    <div class="container">
 
         <header>
             <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
@@ -87,8 +87,7 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link animate__animated animate__fadeIn"
-                                    href="contact_us.html">CONTACT
+                                <a class="nav-link animate__animated animate__fadeIn" href="contact_us.html">CONTACT
                                     US</a>
                             </li>
                             <li class="nav-item">
@@ -115,22 +114,26 @@
                 </div>
 
                 <div class="tc-content">
+                    
                     <div class="section-content scroll-animation" data-animation="animate__fadeInUp">
                         <h2>1. INTRODUCTION</h2>
-                        <ol>
-                            <li>This Campaign is conducted by CGS International Securities Singapore Pte. Ltd. ("<b>CGS
+                        <ol class="decimal-list">
+                            <li>1.1&nbsp;&nbsp;&nbsp;This Campaign is conducted by CGS International Securities
+                                Singapore Pte. Ltd. ("<b>CGS
                                     SG</b>")
                                 and commences from 1 August 2024 to 28 February 2025. Unless otherwise defined,
                                 capitalised
                                 terms used in CGS SG's General Terms and Conditions shall have the same meaning when
                                 used
                                 herein.</li>
-                            <li>This Campaign is open to students currently enrolled in participating Institutes of
+                            <li>1.2&nbsp;&nbsp;&nbsp;This Campaign is open to students currently enrolled in
+                                participating Institutes of
                                 Higher
                                 Learning ("<b>IHL(s)</b>") in Malaysia, Indonesia, Singapore and Thailand
                                 ("<b>Participating
                                     Countries</b>").</li>
-                            <li>For the purposes of administering this Campaign, CGS SG shall delegate the relevant
+                            <li>1.3&nbsp;&nbsp;&nbsp;For the purposes of administering this Campaign, CGS SG shall
+                                delegate the relevant
                                 administrative, supervisory and other related functions of this Campaign in respect of
                                 the
                                 participants of IHLs in Malaysia, Thailand and Indonesia to the respective CGSI entities
@@ -146,10 +149,12 @@
                     <div class="section-content scroll-animation" data-animation="animate__fadeInUp"
                         style="animation-delay: 0.2s;">
                         <h2>2. ELIGIBILITY AND REGISTRATION</h2>
-                        <ol>
-                            <li>Students are required to participate in the country in which their respective IHL is
+                        <ol class="decimal-list">
+                            <li>2.1&nbsp;&nbsp;&nbsp;Students are required to participate in the country in which their
+                                respective IHL is
                                 located.</li>
-                            <li>Students are allowed to participate as a team (consisting of 2 to 4 participants who are
+                            <li>2.2&nbsp;&nbsp;&nbsp;Students are allowed to participate as a team (consisting of 2 to 4
+                                participants who are
                                 enrolled in the same IHL and in the same Participating Country) ("Team") and/or as a
                                 sole
                                 individual ("<b>Individual Participant</b>"). Each Team shall appoint a leader among its
@@ -163,19 +168,23 @@
                                 his
                                 or her team members. Participants who participate both in a Team and as an Individual
                                 Participant cannot be appointed as a Team Leader of their respective Teams.</li>
-                            <li>For the purposes of this Campaign, each Team shall be considered as a single
+                            <li>2.3&nbsp;&nbsp;&nbsp;For the purposes of this Campaign, each Team shall be considered as
+                                a single
                                 participant,
                                 and references to a "participant" in these terms and conditions shall mean either a Team
                                 or
                                 an Individual Participant, as the case may be. Individual Participants and Teams will
                                 compete for the same prizes described in Part 4 below.</li>
-                            <li>Registration opens on 1 August 2024 and closes on 18 October 2024. CGS SG shall have the
+                            <li>2.4&nbsp;&nbsp;&nbsp;Registration opens on 1 August 2024 and closes on 18 October 2024.
+                                CGS SG shall have the
                                 sole and absolute discretion to extend the registration period or close the registration
                                 at
                                 an earlier date.</li>
-                            <li>CGSI shall have the discretion to disqualify any participant that fails to meet the
+                            <li>2.5&nbsp;&nbsp;&nbsp;CGSI shall have the discretion to disqualify any participant that
+                                fails to meet the
                                 applicable criteria for participation.</li>
-                            <li>For the avoidance of doubt, a participant's registration signifies commitment to
+                            <li>2.6&nbsp;&nbsp;&nbsp;For the avoidance of doubt, a participant's registration signifies
+                                commitment to
                                 participate
                                 fully in all aspects of the Campaign. Any failure to do so could result in the
                                 disqualification of the participant from this Campaign.</li>
