--- a/tc.html
+++ b/tc.html
@@ -36,11 +36,14 @@
         <header>
             <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
                 <div class="container">
-
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                    <div class="d-flex d-lg-none w-100 align-items-center">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <a class="nav-link register-btn animate__animated animate__fadeIn ms-auto"
+                            href="https://sso.cgsi.com/aic/">REGISTER</a>
+                    </div>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <!-- Left side navigation -->
@@ -60,8 +63,8 @@
 
                                 <div class="dropdown-menu animate__animated animate__fadeIn">
                                     <a class="dropdown-item" href="country/regional.html">
-                                        <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon"
-                                            style="visibility: hidden" />
+                                        <img src="assets/image/home/flags/regional.png" alt="Regional"
+                                            class="flag-icon" />
                                         REGIONAL
                                     </a>
                                     <a class="dropdown-item" href="country/malaysia.html">
@@ -87,16 +90,15 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link animate__animated animate__fadeIn" href="contact_us.html">CONTACT
-                                    US</a>
+                                <a class="nav-link animate__animated animate__fadeIn" href="contact_us.html">CONTACT US</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link animate__animated animate__fadeIn active" href="tc.html">T&C</a>
                             </li>
                         </ul>
 
-                        <!-- Right side register button -->
-                        <ul class="navbar-nav">
+                        <!-- Register button for desktop only -->
+                        <ul class="navbar-nav d-none d-lg-flex">
                             <li class="nav-item">
                                 <a class="nav-link register-btn animate__animated animate__fadeIn"
                                     href="https://sso.cgsi.com/aic/">REGISTER</a>
@@ -114,85 +116,84 @@
                 </div>
 
                 <div class="tc-content">
-                    
+
                     <div class="section-content scroll-animation" data-animation="animate__fadeInUp">
                         <h2>1. INTRODUCTION</h2>
                         <ol class="decimal-list">
                             <li>1.1&nbsp;&nbsp;&nbsp;This Campaign is conducted by CGS International Securities
-                                Singapore Pte. Ltd. ("<b>CGS
-                                    SG</b>")
-                                and commences from 1 August 2024 to 28 February 2025. Unless otherwise defined,
-                                capitalised
-                                terms used in CGS SG's General Terms and Conditions shall have the same meaning when
-                                used
-                                herein.</li>
+                                Singapore Pte. Ltd. (“<b>CGS SG</b>”) and
+                                commences from 1 April 2025 to 16 November 2025. Unless otherwise defined, capitalised
+                                terms
+                                used in CGS SG’s General Terms and Conditions shall have the same meaning when used
+                                herein. </li>
                             <li>1.2&nbsp;&nbsp;&nbsp;This Campaign is open to students currently enrolled in
-                                participating Institutes of
-                                Higher
-                                Learning ("<b>IHL(s)</b>") in Malaysia, Indonesia, Singapore and Thailand
-                                ("<b>Participating
-                                    Countries</b>").</li>
-                            <li>1.3&nbsp;&nbsp;&nbsp;For the purposes of administering this Campaign, CGS SG shall
+                                participating Institutes of Higher Learning
+                                (“<b>IHL(s)</b>”) in Malaysia, Indonesia, Singapore Thailand and Philippines
+                                (“<b>Participating
+                                    Countries</b>”). </li>
+                            <li>1.3&nbsp;&nbsp;&nbsp;For the purposes of administering this Campaign, CGS SG may
                                 delegate the relevant
                                 administrative, supervisory and other related functions of this Campaign in respect of
                                 the
                                 participants of IHLs in Malaysia, Thailand and Indonesia to the respective CGSI entities
-                                that are incorporated in those countries, namely, CGS International Securities Malaysia
-                                Sdn.
-                                Bhd., (formerly known as CGS-CIMB Securities Sdn. Bhd.), PT CGS International Sekuritas
-                                Indonesia and CGS International Securities (Thailand) Co., Limited. Accordingly, all
-                                references to "CGSI" in these terms and conditions shall mean the CGSI entity in the
-                                respective Participating Country where the context permits.</li>
+                                incorporated in those countries, namely, CGS International Securities Malaysia Sdn.
+                                Bhd., PT CGS
+                                International Sekuritas Indonesia and CGS International Securities (Thailand) Co.,
+                                Limited.
+                                Accordingly, all references to “<b>CGSI</b>” in these terms and conditions shall, where
+                                the
+                                context
+                                permits, mean the CGSI entity in the respective Participating Country, except for
+                                Philippines, where
+                                it shall mean CGS SG. </li>
                         </ol>
                     </div>
 
-                    <div class="section-content scroll-animation" data-animation="animate__fadeInUp"
-                        style="animation-delay: 0.2s;">
+                    <div class="section-content scroll-animation" data-animation="animate__fadeInUp">
                         <h2>2. ELIGIBILITY AND REGISTRATION</h2>
                         <ol class="decimal-list">
                             <li>2.1&nbsp;&nbsp;&nbsp;Students are required to participate in the country in which their
-                                respective IHL is
-                                located.</li>
+                                respective IHL is located.</li>
                             <li>2.2&nbsp;&nbsp;&nbsp;Students are allowed to participate as a team (consisting of 2 to 4
-                                participants who are
-                                enrolled in the same IHL and in the same Participating Country) ("Team") and/or as a
-                                sole
-                                individual ("<b>Individual Participant</b>"). Each Team shall appoint a leader among its
-                                members
-                                ("<b>Team Leader</b>") who will represent his or her Team in all matters relating to
-                                this
-                                Campaign
-                                which includes, but is not limited to, registering for the Campaign, submitting
-                                materials
-                                for the Campaign, receiving and distributing any prizes received under this Campaign to
-                                his
-                                or her team members. Participants who participate both in a Team and as an Individual
-                                Participant cannot be appointed as a Team Leader of their respective Teams.</li>
+                                participants who are enrolled in
+                                the same IHL and in the same Participating Country) (“<b>Team</b>”) and/or as a sole
+                                individual
+                                (“<b>Individual Participant</b>”). Each Team shall appoint a leader among its members
+                                (“<b>Team
+                                    Leader</b>”)
+                                who will represent his or her Team in all matters relating to this Campaign which
+                                include, but are
+                                not limited to, registering for the Campaign, submitting materials for the Campaign,
+                                receiving and
+                                distributing any prizes received under this Campaign to his or her team members.
+                                Participants who
+                                participate both in a Team and as an Individual Participant cannot be appointed as a
+                                Team Leader
+                                of their respective Teams.</li>
                             <li>2.3&nbsp;&nbsp;&nbsp;For the purposes of this Campaign, each Team shall be considered as
-                                a single
-                                participant,
-                                and references to a "participant" in these terms and conditions shall mean either a Team
-                                or
-                                an Individual Participant, as the case may be. Individual Participants and Teams will
-                                compete for the same prizes described in Part 4 below.</li>
-                            <li>2.4&nbsp;&nbsp;&nbsp;Registration opens on 1 August 2024 and closes on 18 October 2024.
-                                CGS SG shall have the
-                                sole and absolute discretion to extend the registration period or close the registration
-                                at
-                                an earlier date.</li>
+                                a single participant, and
+                                references to a “participant” in these terms and conditions shall mean either a Team or
+                                an Individual
+                                Participant, as the case may be. Individual Participants and Teams will compete for the
+                                same prizes
+                                described in Part 4 below.</li>
+                            <li>2.4&nbsp;&nbsp;&nbsp;Registration opens on 1 April 2025 and closes on 30 June 2025. CGS
+                                SG shall have the sole and
+                                absolute discretion to extend the registration period or close the registration at an
+                                earlier date.</li>
                             <li>2.5&nbsp;&nbsp;&nbsp;CGSI shall have the discretion to disqualify any participant that
-                                fails to meet the
-                                applicable criteria for participation.</li>
-                            <li>2.6&nbsp;&nbsp;&nbsp;For the avoidance of doubt, a participant's registration signifies
-                                commitment to
-                                participate
-                                fully in all aspects of the Campaign. Any failure to do so could result in the
-                                disqualification of the participant from this Campaign.</li>
+                                fails to meet the applicable criteria
+                                for participation.</li>
+                            <li>2.6&nbsp;&nbsp;&nbsp;For the avoidance of doubt, a participant’s registration signifies
+                                commitment to participate fully in
+                                all aspects of the Campaign. Any failure to do so could result in the disqualification
+                                of the participant
+                                from this Campaign.</li>
                         </ol>
                     </div>
 
                     <div class="criteria-button-container text-center mt-5">
-                        <a href="assets/doc/Investment_Challenge_T&Cs.pdf" target="_blank"
+                        <a href="assets/doc/Investment_Challenge_TnCs.pdf" target="_blank"
                             class="tc-btn scroll-animation" data-animation="animate__fadeInUp">
                             FULL TERMS & CONDITIONS
                         </a>
