--- a/country/malaysia.html
+++ b/country/malaysia.html
@@ -28,6 +28,15 @@
     <link rel="stylesheet" href="../assets/css/responsive/main/main_768.css">
     <link rel="stylesheet" href="../assets/css/country.css">
 
+    <style>
+        @media (max-width: 768px) {
+            .partners-grid .col-4 {
+                width: 75%;
+                height: 60px;
+            }
+        }
+    </style>
+
 </head>
 
 <body>
@@ -37,11 +46,14 @@
         <header>
             <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
                 <div class="container">
-
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                    <div class="d-flex d-lg-none w-100 align-items-center"></div>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <a class="nav-link register-btn animate__animated animate__fadeIn ms-auto"
+                            href="https://sso.cgsi.com/aic/">REGISTER</a>
+                    </div>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <!-- Left side navigation -->
@@ -61,8 +73,8 @@
 
                                 <div class="dropdown-menu animate__animated animate__fadeIn">
                                     <a class="dropdown-item" href="regional.html">
-                                        <img src="../assets/image/home/flags/malaysia.png" alt="Malaysia"
-                                            class="flag-icon" style="visibility: hidden" />
+                                        <img src="../assets/image/home/flags/regional.png" alt="Regional"
+                                            class="flag-icon" />
                                         REGIONAL
                                     </a>
                                     <a class="dropdown-item" href="malaysia.html">
@@ -88,16 +100,15 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link animate__animated animate__fadeIn" href="../contact_us.html">CONTACT
-                                    US</a>
+                                <a class="nav-link animate__animated animate__fadeIn" href="../contact_us.html">CONTACT US</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link animate__animated animate__fadeIn" href="../tc.html">T&C</a>
                             </li>
                         </ul>
 
-                        <!-- Right side register button -->
-                        <ul class="navbar-nav">
+                        <!-- Register button for desktop only -->
+                        <ul class="navbar-nav d-none d-lg-flex">
                             <li class="nav-item">
                                 <a class="nav-link register-btn animate__animated animate__fadeIn"
                                     href="https://sso.cgsi.com/aic/">REGISTER</a>
@@ -147,22 +158,22 @@
                         </tr>
                         <tr>
                             <td>5th Place</td>
-                            <td></td>
+                            <td>-</td>
                             <td>MYR 1,000</td>
                         </tr>
                         <tr>
                             <td>6th - 15th Place</td>
-                            <td></td>
+                            <td>-</td>
                             <td>MYR 500 each</td>
                         </tr>
                         <tr>
                             <td>16th - 25th Place</td>
-                            <td></td>
+                            <td>-</td>
                             <td>MYR 300 each</td>
                         </tr>
                         <tr>
                             <td>26th - 35th Place</td>
-                            <td></td>
+                            <td>-</td>
                             <td>MYR 200 each</td>
                         </tr>
                     </table>
@@ -270,10 +281,13 @@
                         <div class="champions-header scroll-animation" data-animation="animate__fadeInDown">
                             <h2>Malaysia Champions of AIC 2024</h2>
                         </div>
-
-                        <table class="champions-table" id="champions2024">
-
+                        <!-- Desktop view -->
+                        <table class="champions-table d-none d-md-table" id="champions2024">
                         </table>
+
+                        <!-- Mobile view -->
+                        <div class="champions-cards d-md-none" id="champions2024Mobile">
+                        </div>
 
                     </div>
 
@@ -282,9 +296,13 @@
                             <h2>Malaysia Champions of AIC 2023</h2>
                         </div>
 
-                        <table class="champions-table" id="champions2023">
-
+                        <!-- Desktop view -->
+                        <table class="champions-table d-none d-md-table" id="champions2023">
                         </table>
+
+                        <!-- Mobile view -->
+                        <div class="champions-cards d-md-none" id="champions2023Mobile">
+                        </div>
 
                     </div>
 
