--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
         <header>
             <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
                 <div class="container">
-
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                    <div class="d-flex d-lg-none w-100 align-items-center">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <a class="nav-link register-btn animate__animated animate__fadeIn ms-auto"
+                            href="https://sso.cgsi.com/aic/">REGISTER</a>
+                    </div>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <!-- Left side navigation -->
@@ -60,8 +63,8 @@
 
                                 <div class="dropdown-menu animate__animated animate__fadeIn">
                                     <a class="dropdown-item" href="country/regional.html">
-                                        <img src="assets/image/home/flags/malaysia.png" alt="Malaysia" class="flag-icon"
-                                            style="visibility: hidden" />
+                                        <img src="assets/image/home/flags/regional.png" alt="Regional"
+                                            class="flag-icon" />
                                         REGIONAL
                                     </a>
                                     <a class="dropdown-item" href="country/malaysia.html">
@@ -87,16 +90,15 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link animate__animated animate__fadeIn" href="contact_us.html">CONTACT
-                                    US</a>
+                                <a class="nav-link animate__animated animate__fadeIn" href="contact_us.html">CONTACT US</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link animate__animated animate__fadeIn" href="tc.html">T&C</a>
                             </li>
                         </ul>
 
-                        <!-- Right side register button -->
-                        <ul class="navbar-nav">
+                        <!-- Register button for desktop only -->
+                        <ul class="navbar-nav d-none d-lg-flex">
                             <li class="nav-item">
                                 <a class="nav-link register-btn animate__animated animate__fadeIn"
                                     href="https://sso.cgsi.com/aic/">REGISTER</a>
