--- a/about.html
+++ b/about.html
@@ -384,7 +384,7 @@
                 </div>
 
                 <div class="criteria-button-container text-center">
-                    <a href="assets/doc/AIC Grading Criteria_2025.pdf" target="_blank"
+                    <a href="assets/doc/AIC_Grading_Criteria_2025.pdf" target="_blank"
                         class="criteria-btn scroll-animation" data-animation="animate__fadeInUp">
                         JUDGING CRITERIA
                     </a>
@@ -462,7 +462,7 @@
                 </div>
 
                 <div class="guide-cta text-center">
-                    <a href="assets/doc/AIC User Guide_FINAL.pdf" target="_blank" class="guide-btn scroll-animation"
+                    <a href="assets/doc/AIC_User_Guide_FINAL.pdf" target="_blank" class="guide-btn scroll-animation"
                         data-animation="animate__fadeInUp">
                         <span>TRADING PLATFORM GUIDE</span>
                     </a>
