--- a/country/malaysia.html
+++ b/country/malaysia.html
@@ -46,9 +46,10 @@
         <header>
             <nav class="navbar navbar-expand-lg fixed-top animate__animated animate__fadeInDown">
                 <div class="container">
-                    <div class="d-flex d-lg-none w-100 align-items-center"></div>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <div class="d-flex d-lg-none w-100 align-items-center">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <a class="nav-link register-btn animate__animated animate__fadeIn ms-auto"
@@ -100,7 +101,8 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link animate__animated animate__fadeIn" href="../contact_us.html">CONTACT US</a>
+                                <a class="nav-link animate__animated animate__fadeIn" href="../contact_us.html">CONTACT
+                                    US</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link animate__animated animate__fadeIn" href="../tc.html">T&C</a>
