--- a/country/thailand.html
+++ b/country/thailand.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Thailand | AIC</title>
     <link rel="shortcut icon" href="https://aseaninvestmentchallenge.com/assets/images/favicon.ico">
 
